--- a/TestRestAssured/pom.xml
+++ b/TestRestAssured/pom.xml
@@ -58,6 +58,11 @@
                     </properties>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.11.2</version>
+            </plugin>
         </plugins>
     </build>
 
