--- a/TestRestAssured/pom.xml
+++ b/TestRestAssured/pom.xml
@@ -38,6 +38,12 @@
             <version>20250107</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
